# libepoxy

./: CMakeLists.txt  epoxy_config.cmake.in
include/epoxy/: egl.h  gl.h  glx.h  wgl.h
src/: dispatch_common.c  dispatch_common.h  dispatch_wgl.c  gen_dispatch.py
